Add the progress bar e some text into the site

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
   <body>
+    <div id="progressbar"></div>
+    <div id="scrollPath"></div>
     <section>
       <img src="./assets/bg.jpg" id="bg">
       <img src="./assets/mountain.png" id="mountain">
@@ -11,6 +13,26 @@
       <img src ="./assets/moon.png" id="moon">
       <h2 id="text">É o codas</h2>
     </section>
+    <p id="txt">
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam aliquam mollis ipsum, eget ultricies velit. Sed id diam sodales, porta tortor dapibus, blandit lorem. Cras sagittis turpis at quam gravida bibendum. Nam rutrum aliquet nunc, ut lobortis elit elementum id. Donec quis scelerisque magna. Morbi nec diam eros. Pellentesque faucibus blandit tortor, vitae varius diam feugiat id. Ut nec nisi non sapien sollicitudin rutrum nec vel nisi. Morbi vulputate eros eu lacus tristique dictum. Nulla dictum, tortor ut auctor pellentesque, lorem dolor iaculis ex, vel mattis tellus leo id magna. Etiam vestibulum lectus enim, et rutrum nibh sollicitudin ac.
+
+      Nulla scelerisque posuere purus, id dapibus dolor tempor sed. Vestibulum ullamcorper nec purus a dapibus. Vestibulum nulla dui, posuere ut erat egestas, mollis sodales ligula. Nulla sagittis maximus orci, in efficitur lorem. Ut sed neque sed magna faucibus tristique in id turpis. Donec viverra hendrerit tortor, sit amet dapibus lectus. In hac habitasse platea dictumst.
+
+      Fusce varius iaculis varius. Etiam imperdiet consectetur odio mollis pulvinar. Vestibulum porttitor lacus sed enim placerat, a lacinia mi porttitor. Aenean non mauris dui. Donec facilisis purus malesuada dapibus suscipit. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Donec sit amet nulla facilisis, ornare felis at, pretium massa. Integer venenatis eros at nulla cursus fermentum. Integer fermentum velit in mollis feugiat. Vestibulum viverra sit amet ante ut consectetur. Fusce pellentesque nec nunc at tristique. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Proin elementum eget metus in porta.
+
+      In nec dapibus dui, in laoreet dui. Integer imperdiet efficitur rhoncus. Vivamus ac magna imperdiet, sodales turpis et, volutpat lacus. Mauris pretium mollis tempus. Quisque cursus, neque quis egestas condimentum, enim nunc dictum ipsum, vel mollis velit ante non lacus. Sed mattis tristique enim, vitae vulputate felis aliquet et. Fusce ullamcorper faucibus sodales. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Quisque quis tincidunt nisi. Proin ac libero bibendum, tempus sem in, consequat leo. Ut feugiat ante eget arcu pellentesque sodales. Aliquam maximus commodo turpis, in pellentesque urna condimentum nec. Sed convallis fringilla vehicula. Suspendisse et orci finibus, pretium mi accumsan, ultricies eros. Vivamus euismod laoreet purus, non dignissim orci accumsan vitae.
+
+      Integer imperdiet egestas vulputate. Nunc at velit quis ipsum malesuada bibendum at eget diam. Curabitur tortor leo, blandit ac metus et, scelerisque auctor mauris. Aenean fringilla urna nibh, eu ullamcorper augue laoreet ac. Quisque auctor interdum turpis sed efficitur. Donec quis leo dapibus, pretium justo sed, pretium massa. Sed blandit metus eu suscipit malesuada. Donec in dolor quam. Vestibulum justo ex, maximus a tempus vitae, mattis nec ligula. Nulla dictum rhoncus lectus, vel mattis erat. Proin in accumsan tortor, non dignissim turpis. Sed malesuada ipsum vestibulum risus congue, at posuere enim elementum. Nam non nulla ut elit ornare aliquet quis non lorem. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nunc ullamcorper, mauris eget sagittis pellentesque, diam velit interdum augue, non viverra ligula mi at dolor. Cras sapien erat, feugiat nec erat ac, eleifend blandit augue.
+
+      Suspendisse potenti. Curabitur vitae pulvinar dui. Maecenas mollis orci ut leo luctus rhoncus. Sed dictum, augue eu molestie bibendum, leo est accumsan felis, nec commodo ex neque non lorem. Proin sodales consequat sem elementum gravida. Suspendisse massa velit, laoreet quis lobortis in, aliquet vitae lorem. Donec volutpat, turpis ac dictum lacinia, erat urna consectetur lorem, at feugiat tellus velit quis leo. Donec eleifend felis eu turpis blandit, in condimentum mauris faucibus. Proin sit amet ex at mi tincidunt pellentesque elementum eu velit. Fusce vitae velit mi. In cursus fringilla arcu luctus tincidunt. Sed risus lectus, ultrices dapibus feugiat eu, varius et metus.
+
+      Suspendisse sit amet neque massa. Sed in aliquet dolor. Cras rhoncus nisi ac justo maximus posuere. Sed sapien urna, tristique a suscipit vel, pretium eu sem. Ut aliquam dui pellentesque, blandit leo in, tempor nisi. Aliquam eget nisi ligula. Donec in maximus arcu, eu ultricies ipsum. Praesent posuere tortor sed volutpat tempor. Nullam rhoncus, augue et consequat mollis, eros ante placerat lectus, eget molestie urna arcu id tortor. Etiam tempus in diam vel pretium. Aliquam massa lacus, ullamcorper efficitur rutrum at, sollicitudin sit amet tellus. Duis dapibus mollis mollis. Proin viverra quam ut quam molestie hendrerit. Interdum et malesuada fames ac ante ipsum primis in faucibus.
+
+      Morbi elit sapien, tempor non tincidunt a, eleifend in est. Sed non blandit enim, eget suscipit diam. Aenean vestibulum pulvinar risus, varius tristique ex. Vestibulum dapibus nisl augue, sed suscipit dolor porta ac. Sed at elit vehicula, mattis mi tristique, tempus massa. Nulla egestas maximus ligula nec convallis. Nulla ac leo et odio viverra molestie. Fusce sodales, orci id tempus lobortis, erat mi rhoncus mi, in varius magna augue sit amet nunc. Vestibulum dolor quam, ullamcorper ut hendrerit sit amet, aliquet vitae leo. Praesent tristique tortor ante, ut rhoncus lectus ultrices ut. Duis rutrum erat id mauris tempus mattis. Nunc semper libero neque, a lobortis erat ultricies id. Ut eget euismod ante, et consectetur odio. Ut lobortis ligula tellus, vel tristique augue lacinia at. Proin commodo, purus a tincidunt dictum, lorem ex posuere dolor, ut viverra mauris nisl id diam.
+
+      Donec euismod tellus placerat ligula pharetra, eget ullamcorper metus commodo. Fusce eu turpis eu est commodo viverra nec a justo. Pellentesque tempus diam diam, id dapibus lacus blandit at. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Donec efficitur dui dolor, non laoreet enim sodales ut. Aenean tristique, diam et condimentum maximus, nunc nulla volutpat ante, eget maximus lacus mi tempus orci. Proin nunc tortor, luctus a nisi non, iaculis dictum nibh. Cras sit amet lacus at ex feugiat eleifend et non ante.
+
+    </p>
     <script type="text/javascript">
       let bg = document.getElementById("bg");
       let moon = document.getElementById("moon");
@@ -24,9 +46,17 @@
         moon.style.left = -value * 0.15 + 'px';  
         mountain.style.top = -value * 0.15 + 'px';
         road.style.top = value * 0.15 + 'px'; 
-        text.style.top = value * 1 + 'px';
+        text.style.top = value * 0.5 + 'px';
 
       })
+    </script>
+    <script type="text/javascript">
+      let progress = document.getElementById('progressbar');
+      let totalHeight = document.body.scrollHeight - window.innerHeight; 
+        window.onscroll = function() {
+          let progressHeight = (window.pageYOffset / totalHeight) * 100;
+          progress.style.height = progressHeight + "%";
+      }
     </script>
   </body>
 </html>
